--- a/app/src/main/res/menu/menu_hoteles.xml
+++ b/app/src/main/res/menu/menu_hoteles.xml
@@ -1,17 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.viper2.municipioapp.HotelesActivity">
     <item
-        android:id="@+id/mi_perfil"
+        android:id="@+id/act_main"
         android:orderInCategory="1"
         android:showAsAction="never"
-        android:title="@string/mi_perfil"
-        tools:ignore="AppCompatResource" />
+        android:title="@string/act_main"/>
     <item
-        android:id="@+id/hotel"
+        android:id="@+id/mi_perfil"
         android:orderInCategory="2"
         android:showAsAction="never"
-        android:title="@string/hotel"/>
+        android:title="@string/mi_perfil"/>
     <item
         android:id="@+id/rest"
         android:orderInCategory="3"
