--- a/app/src/main/res/menu/menu_qh.xml
+++ b/app/src/main/res/menu/menu_qh.xml
@@ -1,25 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.viper2.municipioapp.QhActivity">
     <item
         android:id="@+id/act_main"
         android:orderInCategory="1"
         android:showAsAction="never"
         android:title="@string/act_main"/>
     <item
-        android:id="@+id/hotel"
+        android:id="@+id/mi_perfil"
         android:orderInCategory="2"
+        android:showAsAction="never"
+        android:title="@string/mi_perfil"/>
+    <item
+        android:id="@+id/hotel"
+        android:orderInCategory="3"
         android:showAsAction="never"
         android:title="@string/hotel"/>
     <item
         android:id="@+id/rest"
-        android:orderInCategory="3"
-        android:showAsAction="never"
-        android:title="@string/rest"/>
-    <item
-        android:id="@+id/qh"
         android:orderInCategory="4"
         android:showAsAction="never"
-        android:title="@string/qh"/>
+        android:title="@string/rest"/>
     <item
         android:id="@+id/sign_out"
         android:orderInCategory="5"
