--- a/app/src/main/res/layout/app_bar_drawer.xml
+++ b/app/src/main/res/layout/app_bar_drawer.xml
@@ -30,4 +30,12 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 -->
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="380dp"
+        android:layout_height="495dp"
+        tools:layout_editor_ansluteY="8dp"
+        tools:layout_editor_ansluteX="8dp">
+    </ListView>
+
 </android.support.design.widget.CoordinatorLayout>
