--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/guatape"
     tools:context="com.example.viper2.municipioapp.SplashActivity">
 
     <TextView
@@ -11,11 +12,6 @@
         android:textColor="@color/white"
         android:textSize="25dp"
         android:text="@string/app_name"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:src="@drawable/guatape"/>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
