--- a/app/src/main/res/layout/content_hoteles_activity_d.xml
+++ b/app/src/main/res/layout/content_hoteles_activity_d.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.viper2.municipioapp.HotelesActivity">
+    tools:context="com.example.viper2.municipioapp.HotelesActivityD">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
