--- a/app/src/main/res/layout/content_list_activity_d.xml
+++ b/app/src/main/res/layout/content_list_activity_d.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.viper2.municipioapp.DrawerActivity"
-    tools:showIn="@layout/app_bar_drawer">
+    tools:context="com.example.viper2.municipioapp.ListActivityD"
+    tools:showIn="@layout/app_bar_list_activity_d">
 
     <ListView
         android:id="@+id/list"
