--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/guatape"
+    android:background="@drawable/guatape_1"
     tools:context="com.example.viper2.municipioapp.SplashActivity">
 
     <TextView
