--- a/app/src/main/res/menu/activity_menu_all_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_all_drawer.xml
@@ -4,23 +4,23 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_pmain"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_main"
             android:title="@string/pmain" />
         <item
             android:id="@+id/nav_list"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/ic_menu_list"
             android:title="@string/list" />
         <item
             android:id="@+id/nav_hotel"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_hotel"
             android:title="@string/hotel" />
         <item
             android:id="@+id/nav_rest"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/ic_menu_rest"
             android:title="@string/rest" />
         <item
             android:id="@+id/nav_qh"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/ic_menu_qh"
             android:title="@string/qh" />
 
     </group>
@@ -29,11 +29,11 @@
         <menu>
             <item
                 android:id="@+id/nav_mi_perfil"
-                android:icon="@drawable/ic_menu_share"
+                android:icon="@drawable/ic_menu_perfil"
                 android:title="@string/mi_perfil" />
             <item
                 android:id="@+id/nav_sing_out"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/ic_menu_sign_out"
                 android:title="@string/sign_out" />
         </menu>
     </item>
