--- a/app/src/main/res/layout/nav_header_perfil_activity_d.xml
+++ b/app/src/main/res/layout/nav_header_perfil_activity_d.xml
@@ -13,21 +13,22 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewDrawer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@drawable/ic_menu_perfil" />
 
     <TextView
+        android:id="@+id/P_textViewDrawer1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Android Studio"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+         />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/P_textViewDrawer2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="android.studio@android.com" />
