--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -32,12 +32,14 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:hint="@string/password"
+        android:inputType="textPassword"
         android:id="@+id/ePasswordr"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:hint="@string/repassword"
+        android:inputType="textPassword"
         android:id="@+id/eRepasswordr"/>
     <EditText
         android:layout_width="match_parent"
