--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:hint="@string/password"
+        android:inputType="textPassword"
         android:id="@+id/ePassword"/>
     <Button
         android:layout_width="wrap_content"
