--- a/app/src/main/res/layout/fragment_hotel_uno.xml
+++ b/app/src/main/res/layout/fragment_hotel_uno.xml
@@ -77,6 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center">
+                <!--
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -89,7 +90,15 @@
                     android:layout_gravity="center"
                     android:textColor="@color/blue"
                     android:text="@string/HotelUno_texto_4"
-                    android:layout_margin="2dp"/>
+                    android:layout_margin="2dp"
+                    android:id="@+id/h1map"/>
+                    -->
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_weight="0"
+                    android:layout_height="wrap_content"
+                    android:text="@string/mapa"
+                    android:id="@+id/bhunomap"/>
             </LinearLayout>
         </GridLayout>
     </ScrollView>
