--- a/app/src/main/res/layout/fragment_hotel_dos.xml
+++ b/app/src/main/res/layout/fragment_hotel_dos.xml
@@ -75,10 +75,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center">
-                <!--
-                <TextView
+                android:layout_gravity="center">
+            <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -92,14 +90,7 @@
                     android:text="@string/HotelDos_texto_4"
                     android:layout_margin="2dp"
                     android:id="@+id/h1map"/>
-                    -->
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_weight="0"
-                    android:layout_height="wrap_content"
-                    android:text="@string/mapa"
-                    android:id="@+id/bhdosmap"/>
-            </LinearLayout>
+              </LinearLayout>
         </GridLayout>
     </ScrollView>
 
